# srrg2_core

./: .gitignore  README.md
srrg2_core/: CMakeLists.txt  README.md  package.xml
srrg2_core/apps/: CMakeLists.txt  converter_clf_to_srrg.cpp  converter_euroc_to_srrg.cpp  converter_icl_to_srrg.cpp  converter_kitti_to_srrg.cpp  converter_malaga_to_srrg.cpp  converter_tum_to_srrg.cpp  extract_gt_from_srrg.cpp  geigerzaehler.cpp  image_matcher_features.cpp  image_matcher_frobenius.cpp
srrg2_core/src/: CMakeLists.txt  TODO.txt
srrg2_core/src/examples/: CMakeLists.txt  abstract_container_example.cpp  boss_example.cpp  boss_property_example.cpp  boss_shared_example.cpp  command_line_example.cpp  container_pack_example.cpp  field_pack_example.cpp  geometry_example.cpp  image_data_example.cpp  image_loading.cpp  kdtree_example.cpp  matrix_bilinear_interpolation_example.cpp  matrix_example.cpp  message_sorter_example.cpp  message_synchronizer_example.cpp  messages_read_example.cpp  messages_write_example.cpp  point_cloud_example.cpp  point_cloud_ops_example.cpp  shell_colors_example.cpp  timestamp_filter_example.cpp
srrg2_core/src/misc_tests/: test_cloud_intensity.cpp  test_distance_map.cpp  test_key_events.cpp  test_normal_computation.cpp  test_platform_synthetic_transforms.cpp  test_point_cloud_polar.cpp  test_viewer_packets_serialization.cpp  test_viewer_shared_memory.cpp
srrg2_core/src/srrg_benchmark/: slam_benchmark_suite.hpp  slam_benchmark_suite_carmen.hpp  slam_benchmark_suite_euroc.hpp  slam_benchmark_suite_icl.hpp  slam_benchmark_suite_kitti.hpp  slam_benchmark_suite_malaga.hpp  slam_benchmark_suite_tum.hpp  trajectory_writers.h
srrg2_core/src/srrg_boss/: CMakeLists.txt  blob.cpp  blob.h  deserializer.cpp  deserializer.h  eigen_boss_plugin.h  eigen_boss_plugin.hpp  id_context.cpp  id_context.h  id_placeholder.cpp  id_placeholder.h  identifiable.cpp  identifiable.h  json_object_writer.cpp  json_object_writer.h  json_recursive_object_parser.cpp  json_recursive_object_parser.h  object_data.cpp  object_data.h  object_parser.cpp  object_parser.h  object_writer.cpp  object_writer.h  serializable.cpp  serializable.h  serialization_context.cpp  serialization_context.h  serializer.cpp  serializer.h  stream.cpp  stream.h  trusted_loaders.h
srrg2_core/src/srrg_config/: CMakeLists.txt  configurable.cpp  configurable.h  configurable_command.h  configurable_manager.h  configurable_shell.cpp  configurable_shell.h  configurable_visual_shell.cpp  configurable_visual_shell.h  linenoise.c  linenoise.h  param_macros.h  property_configurable.h  property_configurable_vector.h
srrg2_core/src/srrg_data_structures/: CMakeLists.txt  abstract_map.h  abstract_map_view.h  abstract_ptr_map.h  container_pack.h  correspondence.h  events.h  field_pack.h  generic_class_method_caller.h  graph.cpp  graph.h  grid_map_2d.cpp  grid_map_2d.h  indexed_container_interface.h  iterator_interface.h  kd_tree.h  kd_tree.hpp  kd_tree_impl.cpp  link.cpp  link.h  matrix.h  matrix.hpp  path_matrix.cpp  path_matrix.h  path_matrix_clusterer_search.cpp  path_matrix_clusterer_search.h  path_matrix_dijkstra_search.cpp  path_matrix_dijkstra_search.h  path_matrix_distance_search.cpp  path_matrix_distance_search.h  path_matrix_search_base.h  platform.cpp  platform.h  pointer_traits.h  traverse_line.h  traverse_line_main.cpp
srrg2_core/src/srrg_geometry/: CMakeLists.txt  ad.h  ad_quaternion.h  epipolar.cpp  epipolar.h  geometry2d.h  geometry3d.h  geometry_defs.h  permutation_sampler.cpp  permutation_sampler.h  similiarity.hpp
srrg2_core/src/srrg_image/: CMakeLists.txt  image.cpp  image.h  image.hpp  image_data.cpp  image_data.h
srrg2_core/src/srrg_matchable/: CMakeLists.txt  descriptor_owner.h  instances.cpp  instances.h  matchable.h  matchable.hpp  visual_matchable.h
srrg2_core/src/srrg_messages/: CMakeLists.txt  instances.cpp  instances.h
srrg2_core/src/srrg_pcl/: CMakeLists.txt  camera_matrix_owner.h  instances.cpp  instances.h  normal_computator.h  normal_computator.hpp  point.h  point_base.h  point_cloud.h  point_color.h  point_default_field.h  point_defs.h  point_derived.h  point_descriptor_field.cpp  point_descriptor_field.h  point_example.h  point_fields.h  point_intensity.h  point_intensity_descriptor.h  point_matrix_processor.h  point_matrix_processor.hpp  point_normal.h  point_normal_color.h  point_normal_curvature.h  point_normal_curvature_color.h  point_normal_intensity.h  point_ops.h  point_projector.h  point_projector_lidar3d.h  point_projector_lidar3d.hpp  point_projector_lidar3d_types.h  point_projector_pinhole.h  point_projector_polar.h  point_projector_types.h  point_scalar_field.h  point_statistics_field.h  point_types.h  point_types_data.h  point_unprojector.h  point_unprojector_lidar3d.h  (+5 more)
srrg2_core/src/srrg_property/: CMakeLists.txt  property.cpp  property.h  property_container.cpp  property_container.h  property_container_manager.cpp  property_container_manager.h  property_eigen.cpp  property_eigen.h  property_identifiable.cpp  property_identifiable.h  property_macros.h  property_pair.h  property_serializable.h  property_vector.h  vector_data.h
srrg2_core/src/srrg_system_utils/: CMakeLists.txt  env.cpp  env.h  parse_command_line.cpp  parse_command_line.h  profiler.cpp  profiler.h  shell_colors.h  stream_helpers.h  system_utils.cpp  system_utils.h  timestamp_filter.h
srrg2_core/src/srrg_test/: synthetic_world.hpp  test_helper.hpp
srrg2_core/src/srrg_viewer/: CMakeLists.txt  (+14 more)
srrg2_core/tests/: CMakeLists.txt  test_abstract_map.cpp  test_epipolar.cpp  test_geometry.cpp  test_image_data.cpp  test_kd_tree.cpp  test_matchables.cpp  test_matrix_bilinear_interpolation.cpp  test_message_sources.cpp  test_messages.cpp  test_point_intensity_descriptor.cpp  test_point_statistics_field.cpp  test_points.cpp  test_profiler.cpp  test_projector.cpp  test_similiarity.cpp  test_streaming_configurable.cpp  test_unprojector.cpp  test_viewer_packets.cpp
srrg2_core_ros/: CMakeLists.txt  README.md  package.xml
srrg2_core_ros/msg/: ViewerBufferMessage.msg
srrg2_core_ros/src/: CMakeLists.txt
(+193 files in other folders)
