add_subdirectory(srrg_system_utils)
add_subdirectory(srrg_geometry)
add_subdirectory(srrg_boss)
add_subdirectory(srrg_property)
add_subdirectory(srrg_config)
add_subdirectory(srrg_image)
add_subdirectory(srrg_pcl)
add_subdirectory(srrg_matchable)
add_subdirectory(srrg_data_structures)
add_subdirectory(srrg_messages)
add_subdirectory(srrg_viewer)
add_subdirectory(examples)

#ia miscellaneous tests (not gtests)
add_subdirectory(misc_tests)
